--- a/owncloudApp/src/main/res/values-ja-rJP/strings.xml
+++ b/owncloudApp/src/main/res/values-ja-rJP/strings.xml
@@ -151,6 +151,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">WiFiの接続を待っています</string>
   <string name="uploads_view_later_waiting_to_upload">アップロード待ち</string>
   <string name="uploads_view_unsupported_media_type">サポートされていない形式のメディア</string>
+  <string name="downloader_download_in_progress_ticker">ダウンロード中...</string>
   <string name="downloader_download_in_progress_content">%1$d%% ダウンロード中 %2$s</string>
   <string name="downloader_download_succeeded_ticker">ダウンロードに成功</string>
   <string name="downloader_download_succeeded_content">%1$s は正常にダウンロードされました</string>
@@ -212,6 +213,7 @@
   <string name="media_forward_description">早送りボタン</string>
   <string name="upload_from_camera_title">カメラのピクチャー</string>
   <string name="auth_getting_authorization">認証中...</string>
+  <string name="auth_trying_to_login">ログインしています...</string>
   <string name="auth_no_net_conn_title">ネットワークに接続されていません</string>
   <string name="auth_nossl_plain_ok_title">暗号化通信が利用できません。</string>
   <string name="auth_connection_established">接続が確立しました</string>
